<resources>
    <string name="app_name">GeoQuiz</string>

    <string name="question_stolica_polski">Czy Warszawa jest stolicą Polski?</string>
    <string name="question_stolica_dolnego_slaska">Czy Świdnica jest stolicą Dolnego Śląska?</string>
    <string name="question_wisla">Czy Wisła jest najdłuższą rzeką \n Polski?</string>
    <string name="question_sniezka">Czy Śnieżka to najwyższy szczyt \n Karkonoszy?</string>
    <string name="question_polska">Czy Polska leży w Ameryce Północnej?</string>
    <string name="question_new_question">NOWE PYTANIE</string>


    <string name="true_button">Prawda</string>
    <string name="false_button">Fałsz</string>
    <string name="next_button">Następne</string>
    <string name="back_button">Poprzednie</string>

    <string name="correct_toast">Odpowiedź poprawna!</string>
    <string name="incorrect_toast">Odpowiedź błędna!</string>

    <string name="answered">Odpowiedź na to pytanie została podana.</string>
    <string name="answered_questions">Poprawnie podane odpowiedzi: </string>

    <string name="button_show_label">Show</string>
    <string name="warning_text_view_label">Czy na pewno chcesz to zrobić</string>
    <string name="cheat_button_label">Cheat</string>
    <string name="message_for_cheaters">We know that you\'ve cheated</string>

    <string name="used_all_tokens">Wykorzystano wszystkie tokeny.</string>

    <string name="new_question">New Question</string>
    <string name="quit">Quit</string>
    <string name="back">Back</string>
    <string name="share">Share results</string>
    <string name="subtitle_format">%1d questions</string>

    <string name="questions_quantity_label">Ilość zadanych pytań: </string>
    <string name="answered_questions_label">Udzielone poprawnie odpowiedzi: </string>
    <string name="remaining_tokens_label">Pozostałe cheat tokeny: </string>
</resources>
