<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_questions_quantity"
        android:gravity="center"
        android:padding="24dp"
        android:text="@string/questions_quantity_label"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_answered_questions"
        android:padding="24dp"
        android:text="@string/answered_questions_label"
        android:gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_remaining_tokens"
        android:padding="24dp"
        android:text="@string/remaining_tokens_label"
        android:gravity="center"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Take Photo"
        android:id="@+id/button_photo"
        />

    <ImageView
        android:id="@+id/image_view"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_gravity="center"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary" />


</LinearLayout>